# th8-dcc-sense-backend-v1

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  project_context.md
app/core/: config.py  errors.py  hashing.py  logging.py  middleware.py
app/infra/: supabase_client.py
app/policies/: sense_policy_mvp.yaml  sense_policy_mvp_v0.yaml  sense_policy_mvp_v1.yaml
app/repositories/: audit_repo.py  base.py  case_decision_result_repo.py  case_document_link_repo.py  case_evidence_group_repo.py  case_evidence_repo.py  case_fact_repo.py  case_line_item_repo.py  case_repo.py  case_repo_ext.py  chunk_repo.py  clause_repo.py  copilot_audit_ropo.py  copilot_repo.py  decision_run_repo.py  document_header_repo.py  document_open_repo.py  document_repo.py  entity_repo.py  ingestion_repo.py  page_repo.py  price_repo.py  storage_repo.py  transaction_line_item_repo.py  transaction_repo.py  vector_discovery_repo.py
app/routers/: cases.py  copilot.py  debug.py  decision.py  discovery.py  documents.py  evidence.py  facts.py  groups.py  ingestion.py  policy.py  transactions.py  viewer.py
app/schemas/: decision_run_view_model.py
app/services/audit/: audit_models.py  audit_timeline_builder.py  audit_timeline_builder_v1.py
app/services/case/: case_decision_summary_service.py  case_group_service.py  case_models.py  case_processing_run_service.py  case_service.py
app/services/chunking/: chunker.py
app/services/copilot/: copilot_agent.py  copilot_orchestrator.py  document_context_builder.py  (+2 more)
app/static/: viewer.html
app/workers/: ingestion_worker.py
(+52 files in other folders)
